# regatta

./: .gitignore  CLAUDE.md  Makefile  README.md  package-lock.json
backend/: .env.test  Procfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: ca143481a67e_create_games_table.py  f3ae504a0b68_initial.py
backend/src/regatta/: __init__.py  config.py  main.py
backend/src/regatta/api/: auth.py  deps.py  schemas.py
backend/src/regatta/api/routes/: games.py  ws.py
backend/src/regatta/core/: __init__.py  game_actions.py  geometry.py
backend/src/regatta/db/: engine.py  models.py
backend/src/regatta/models/: __init__.py  board.py  game.py  position.py  wind.py  yacht.py
backend/src/regatta/serialization/: game_serializer.py
backend/src/regatta/ws/: connection_manager.py
backend/tests/: __init__.py  conftest.py  test_api_games.py  test_board.py  test_connection_manager.py  test_game_actions.py  test_position.py  test_serialization.py  test_wind.py  test_ws.py  test_yacht.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wallaby.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Board.tsx  FinishedPhase.tsx  InteractiveBoard.tsx  LoadingButton.spec.tsx  LoadingButton.tsx  LobbyPhase.tsx  RacingPhase.tsx  SailCompass.tsx  SetupPhase.tsx
frontend/src/pages/: GamePage.tsx  LobbyPage.tsx  LoginPage.tsx
frontend/src/types/: api.ts  models.ts
frontend/src/utils/: api.ts
